# tfl

./: .gitignore  README.md
lab1/: base_smt2.txt  main.py  test1.txt  to_solve.smt2
lab2/: BinaryTree.hpp  BrzozowskiAutomaton.cpp  BrzozowskiAutomaton.hpp  Brzozowski_derivative.cpp  CMakeLists.txt  main.cpp
lab2/cmd/: CMakeLists.txt  main.cpp
lab2/src/: CMakeLists.txt
lab2/src/Brzozowski/include/: BrzozowskiAutomaton.hpp
lab2/src/Brzozowski/src/: BrzozowskiAutomaton.cpp
lab2/src/DFA/include/: DFA.hpp
lab2/src/DFA/src/: DFA.cpp
lab2/src/Derivative/include/: Derivative.hpp
lab2/src/Derivative/src/: Derivative.cpp
lab2/src/Node/include/: Node.hpp
lab2/src/Node/src/: Node.cpp
lab2/src/ProgramOp/include/: ProgramOptions.hpp
lab2/src/ProgramOp/src/: ProgramOptions.cpp
lab2/src/RegexGenerator/include/: RegexGenerator.hpp
lab2/src/RegexGenerator/src/: RegexGenerator.cpp
lab3/: CMakeLists.txt  Earley.hpp  grammar  lab3_exec  main.cpp  partition
lab3/cmd/: CMakeLists.txt  main.cpp
lab3/src/: CMakeLists.txt
lab3/src/DFA/: CMakeLists.txt
lab3/src/DFA/include/: DFA.hpp
lab3/src/DFA/src/: DFA.cpp
lab3/src/Earley/: CMakeLists.txt
lab3/src/Earley/include/: Earley.hpp  Grammar.hpp
lab3/src/Earley/src/: Earley.cpp
lab3/src/LStar/: CMakeLists.txt
lab3/src/LStar/include/: LStar.hpp  ObservationTable.cpp  ObservationTable.h
lab3/src/LStar/src/: LStar.cpp
lab3/src/OracleModule/: CMakeLists.txt
lab3/src/OracleModule/include/: OracleModule.hpp
lab3/src/OracleModule/src/: OracleModule.cpp
lab3/src/ProgramOp/: CMakeLists.txt
lab3/src/ProgramOp/include/: ProgramOptions.hpp
lab3/src/ProgramOp/src/: ProgramOptions.cpp
lab3/src/utils/: CMakeLists.txt
lab3/src/utils/include/: utils.hpp
lab3/src/utils/src/: utils.cpp
